# sdd-nwtracker

./: .gitignore  CLAUDE.md  justfile  stakeholder-inputs.md
backend/: .env.sample  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  account.py  balance.py  currency.py  exchange_rate.py  institution.py  report.py  tag.py
backend/app/routers/: accounts.py  balances.py  csv_io.py  currencies.py  exchange_rates.py  health.py  institutions.py  reports.py  tags.py
backend/app/services/: csv_export.py  csv_import.py  raw_csv_export.py  raw_csv_import.py  reports.py
backend/scripts/: db_init.py  db_seed.py
backend/tests/: conftest.py  test_accounts.py  test_balances.py  test_csv_io.py  test_currencies.py  test_exchange_rates.py  test_health.py  test_institutions.py  test_models.py  test_raw_csv_io.py  test_reports.py  test_tags.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
specs/: csv-format.md  mission.md  roadmap.md  tech-stack.md
specs/260504-phase-1-db-foundation/: plan.md  requirements.md  validation.md
specs/260505-phase-2-fastapi-skeleton/: plan.md  requirements.md  validation.md
specs/260506-phase-3-reference-data-api/: plan.md  requirements.md  validation.md
specs/260506-phase-4-accounts-api/: plan.md  requirements.md  validation.md
specs/260506-phase-5-balances-api/: plan.md  requirements.md  validation.md
specs/260507-phase-6-exchange-rates-api/: plan.md  requirements.md  validation.md
specs/260507-phase-7-reports-api/: plan.md  requirements.md  validation.md
specs/260507-phase-8-csv-import-export/: plan.md  requirements.md  validation.md
specs/260507-phase-9-frontend-scaffold/: plan.md  requirements.md  validation.md
specs/260508-phase-10-reference-data-ui/: plan.md  (+2 more)
(+45 files in other folders)
